--- a/assets/main.css
+++ b/assets/main.css
@@ -1,7 +1,3 @@
-body {
-   font-family: 'Roboto', sans-serif;
-}
-
 a {
   text-decoration: none !important;
   color: rgba(0, 0, 0, 0.6) !important;
@@ -21,27 +17,93 @@ a {
 .btn-cart {
   transition: all 0.3s ease-in;
 }
+
 .btn-cart:hover {
   color: white;
 }
+
 .border-color {
+  width: 33px;
+  height: 33px;
   cursor: pointer;
   border: 2px solid blue;
 }
+
 .border-gray {
   border: 1px solid gray;
   transition: all 0.3s ease-in;
 }
+
 .border-gray--active {
   background-color: #8798bf;
 }
+
 .border-gray:hover {
   background-color: #8798bf;
 }
+
 .input-sizes {
   text-align: center;
   color: #575757;
   font-size: 0.7rem;
   text-decoration: none;
   transition: color 0.3s, background-color 0.3s ease-in;
+}
+
+input[type='radio'] {
+  opacity: 0;
+  position: fixed;
+  width: 0;
+}
+
+.radio-colors label {
+  cursor: pointer;
+  display: inline-block;
+  padding: 15px;
+  border: 1px solid grey;
+}
+
+.radio-colors input[type='radio']:checked + label {
+  outline: 2px solid blue !important;
+}
+
+.radio-sizes label {
+  font-size: 0.75rem;
+  cursor: pointer;
+  display: inline-block;
+  padding: 5px 10px;
+  border: 1px solid grey;
+  transition: all 0.3s ease-in;
+}
+
+.radio-sizes label:hover {
+  background-color: #8798bf;
+}
+
+.radio-sizes input[type='radio']:checked + label {
+  background-color: #8798bf;
+}
+
+.radio-sizes--disabled label{
+  color: rgb(199, 199, 199);
+}
+
+.sale-price {
+  background-color: #f34f98;
+  color: white;
+  padding: 5px;
+}
+
+.sticky {
+  position: sticky !important;
+  top: 64px !important;
+}
+
+.v-list-item {
+  /* padding-left: 36px !important; */
+  /* min-height: 10px !important; */
+}
+
+.pointer {
+  cursor: pointer;
 }
