Fixed drawer item width, and styled btn

--- a/assets/main.css
+++ b/assets/main.css
@@ -4,8 +4,8 @@ a {
 }
 
 .border-tb {
-   border-top: 1px solid black;
-   border-bottom: 1px solid black;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
 }
 
 .j-icon {
@@ -16,10 +16,15 @@ a {
 
 .btn-cart {
   transition: all 0.3s ease-in;
+  font-weight: bold !important;
 }
 
 .btn-cart:hover {
   color: white;
+}
+
+.btn-text-initial {
+  text-transform: initial !important;
 }
 
 .border-color {
@@ -84,7 +89,7 @@ input[type='radio'] {
   background-color: #8798bf;
 }
 
-.radio-sizes--disabled label{
+.radio-sizes--disabled label {
   color: rgb(199, 199, 199);
 }
 
@@ -106,4 +111,8 @@ input[type='radio'] {
 
 .pointer {
   cursor: pointer;
+}
+
+.v-application--is-ltr .v-list-item__icon:last-of-type:not(:only-child) {
+  margin-left: 0 !important;
 }
